// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing EntityComponent component renders correctly with url and title provided 1`] = `
<div
  id="title-component"
>
  <img
    className="image"
    src="https://streamcoimg-a.akamaihd.net/000/128/61/12861-PosterArt-ec32a81986a45eac7e080112075ab466.jpg"
  />
  <div>
    <span
      className="title"
    >
      abc
    </span>
  </div>
</div>
`;

exports[`Testing EntityComponent component renders correctly without url and title 1`] = `
<div
  id="title-component"
>
  <img
    className="image"
    src="test-file-stub"
  />
  <div>
    <span
      className="title"
    />
  </div>
</div>
`;
